# Rocket_API_Student_Management_Rust_PostgreSQL

./: README.md
StudentManagement_PostgreSQL/: Cargo.toml
StudentManagement_PostgreSQL/migrations/2024-05-22-035135_create_students/: up.sql
StudentManagement_PostgreSQL/src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs
