[package]
name = "rocket_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
dotenv = "0.15"
